# algorimatrix

./: AlgorimatrixQt.cpp  AlgorimatrixQt.h  AlgorimatrixQt.qrc  AlgorimatrixQt.ui  CMakeLists.txt  CharToken.cpp  CharToken.h  DataStorage.cpp  ExtendParser.cpp  ExtendParser.h  Matrix.cpp  Matrix.h  MatrixException.cpp  MatrixException.h  MatrixFunc.cpp  MatrixFunc.h  NumberToken.cpp  NumberToken.h  ObjectMatrix.h  ParseException.cpp  ParseException.h  ParseResult.cpp  ParseResult.h  README.md  StringToken.cpp  StringToken.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  WorkThreadQt.cpp  WorkThreadQt.h  main.cpp
